// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordInput matches the snapshot (Disabled) 1`] = `
.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c6 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c6:focus {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c6 > svg {
  color: inherit;
  height: var(--size-1x);
  width: var(--size-1x);
}

.c5 {
  background-color: transparent;
  border-color: transparent;
  color: #60666E;
  padding: 0;
  width: var(--size-2x);
}

.c5 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c5:focus {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c5:hover,
.c5[aria-expanded='true'] {
  background-color: rgb(0 0 0 / 0.15);
  border-color: transparent;
  color: #1B1C1E;
}

.c5:disabled {
  background-color: transparent;
  border-color: transparent;
  color: #B7BBC2;
}

.c5 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c9 {
  height: 1.25rem;
  position: absolute;
  width: 1rem;
}

.c9::before {
  border-style: solid;
  content: '';
  display: block;
  height: 0;
  margin: auto;
  width: 0;
}

.c9::after {
  border-style: solid;
  content: '';
  display: block;
  height: 0;
  margin: auto;
  position: absolute;
  width: 0;
}

.c7 {
  background-color: #60666E;
  border: 1px solid #FFFFFF;
  border-radius: var(--border-radius-half);
  box-shadow: 0 10px 20px 0 rgb(0 0 0 / 19%);
  box-sizing: border-box;
  color: #FFFFFF;
  display: none;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 0.75rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.25rem;
  margin: 0;
  max-width: 327px;
  min-height: 24px;
  padding: 1px var(--spacing-1x);
  -webkit-transition: opacity 300ms;
  transition: opacity 300ms;
  z-index: 1000;
}

.c7[data-popper-placement*="bottom"] > .c8 {
  height: 1rem;
  left: 0;
  margin-top: -0.375rem;
  top: 0;
  width: 1rem;
}

.c7[data-popper-placement*="bottom"] > .c8::before {
  border-color: transparent transparent #FFFFFF transparent;
  border-width: 0 0.5rem 0.5rem;
  position: absolute;
  top: -2px;
}

.c7[data-popper-placement*="bottom"] > .c8::after {
  border-color: transparent transparent #60666E transparent;
  border-width: 0 0.5rem 0.5rem;
}

.c7[data-popper-placement*="top"] > .c8 {
  bottom: 0;
  height: 0;
  left: 0;
  margin-bottom: 0;
  width: 1rem;
}

.c7[data-popper-placement*="top"] > .c8::before {
  border-color: #FFFFFF transparent transparent transparent;
  border-width: 0.5rem 0.5rem 0;
  position: absolute;
  top: 0;
}

.c7[data-popper-placement*="top"] > .c8::after {
  border-color: #60666E transparent transparent transparent;
  border-width: 0.5rem 0.5rem 0;
  top: -0.1rem;
}

.c7[data-popper-placement*="right"] > .c8 {
  height: 1rem;
  left: 0;
  margin-left: -0.8rem;
  width: 1rem;
}

.c7[data-popper-placement*="right"] > .c8::before {
  border-color: transparent #FFFFFF transparent transparent;
  border-width: 0.5rem 0.5rem 0.5rem 0;
}

.c7[data-popper-placement*="right"] > .c8::after {
  border-color: transparent #60666E transparent transparent;
  border-width: 0.5rem 0.5rem 0.5rem 0;
  left: 0.375rem;
  top: 0;
}

.c7[data-popper-placement*="left"] > .c8 {
  height: 1rem;
  margin-right: -0.7rem;
  right: -1px;
  width: 1rem;
}

.c7[data-popper-placement*="left"] > .c8::before {
  border-color: transparent transparent transparent #FFFFFF;
  border-width: 0.5rem 0 0.5rem 0.5rem;
}

.c7[data-popper-placement*="left"] > .c8::after {
  border-color: transparent transparent transparent #60666E;
  border-width: 0.5rem 0 0.5rem 0.5rem;
  left: 0.17rem;
  top: 0;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c4 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c4:focus {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #60666E;
}

.c0 > :nth-child(0) {
  margin-bottom: var(--spacing-half);
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  color: #60666E;
  position: absolute;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.c2 {
  background: #FFFFFF;
  border: 1px solid;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  color: #000000;
  font-family: inherit;
  font-size: 0.875rem;
  -webkit-letter-spacing: 0.015rem;
  -moz-letter-spacing: 0.015rem;
  -ms-letter-spacing: 0.015rem;
  letter-spacing: 0.015rem;
  line-height: 1.5rem;
  margin: 0;
  min-height: var(--size-2x);
  outline: none;
  padding-bottom: 0;
  padding-top: 0;
  padding-right: var(--spacing-4x);
  padding-left: var(--spacing-1x);
  width: 100%;
}

.c2::-webkit-input-placeholder {
  color: #60666E;
}

.c2::-moz-placeholder {
  color: #60666E;
}

.c2:-ms-input-placeholder {
  color: #60666E;
}

.c2::placeholder {
  color: #60666E;
}

.c2:valid,
.c2[aria-invalid='false'] {
  border-color: #60666E;
}

.c2[aria-invalid='true'] {
  border-color: #CD2C23;
}

.c2:disabled,
.c2[aria-disabled='true'] {
  background-color: #F1F2F2;
  border-color: #DBDEE1;
  color: #DBDEE1;
}

.c2:disabled,
.c2[aria-disabled='true'],
.c2:disabled::-webkit-input-placeholder,
.c2[aria-disabled='true']::-webkit-input-placeholder {
  color: #B7BBC2;
}

.c2:disabled,
.c2[aria-disabled='true'],
.c2:disabled::-moz-placeholder,
.c2[aria-disabled='true']::-moz-placeholder {
  color: #B7BBC2;
}

.c2:disabled,
.c2[aria-disabled='true'],
.c2:disabled:-ms-input-placeholder,
.c2[aria-disabled='true']:-ms-input-placeholder {
  color: #B7BBC2;
}

.c2:disabled,
.c2[aria-disabled='true'],
.c2:disabled::placeholder,
.c2[aria-disabled='true']::placeholder {
  color: #B7BBC2;
}

.c2 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c2:focus {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

<PasswordInput
  disabled={true}
  value="Pass123"
>
  <InputField
    autoComplete="current-password"
    data-testid="password-input"
    disabled={true}
    name="password"
    onChange={[Function]}
    rightAdornment={
      <Tooltip
        desktopPlacement="top"
        label="Show password in plain text."
      >
        <IconButton
          aria-label="Show password in plain text."
          aria-pressed={false}
          buttonType="tertiary"
          data-testid="show-password-button"
          disabled={true}
          iconName="eye"
          onClick={[Function]}
          type="button"
        />
      </Tooltip>
    }
    type="password"
    valid={true}
    validationErrorMessage=""
    value="Pass123"
  >
    <FieldContainer
      data-testid="field-container"
      disabled={true}
      valid={true}
      validationErrorMessage=""
    >
      <styled.div
        $hasHint={false}
        $hasLabel={false}
        $valid={true}
        data-testid="field-container"
      >
        <div
          className="c0"
          data-testid="field-container"
        >
          <Input
            autoComplete="current-password"
            data-testid="password-input"
            name="password"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInvalid={[Function]}
            rightAdornment={
              <Tooltip
                desktopPlacement="top"
                label="Show password in plain text."
              >
                <IconButton
                  aria-label="Show password in plain text."
                  aria-pressed={false}
                  buttonType="tertiary"
                  data-testid="show-password-button"
                  disabled={true}
                  iconName="eye"
                  onClick={[Function]}
                  type="button"
                />
              </Tooltip>
            }
            type="password"
            value="Pass123"
          >
            <styled.div>
              <div
                className="c1"
              >
                <styled.input
                  $hasLeftAdornment={false}
                  $hasRightAdornment={true}
                  $isMobile={false}
                  aria-disabled={true}
                  aria-invalid="false"
                  aria-required={false}
                  autoComplete="current-password"
                  data-testid="password-input"
                  disabled={true}
                  id="uuid1"
                  name="password"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInvalid={[Function]}
                  required={false}
                  type="password"
                  value="Pass123"
                >
                  <input
                    aria-disabled={true}
                    aria-invalid="false"
                    aria-required={false}
                    autoComplete="current-password"
                    className="c2"
                    data-testid="password-input"
                    disabled={true}
                    id="uuid1"
                    name="password"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInvalid={[Function]}
                    required={false}
                    type="password"
                    value="Pass123"
                  />
                </styled.input>
                <styled.div
                  position="right"
                >
                  <div
                    className="c3"
                  >
                    <Tooltip
                      desktopPlacement="top"
                      label="Show password in plain text."
                    >
                      <styled.span
                        aria-describedby="uuid3"
                        data-testid="tooltip"
                        id="tooltip-trigger-uuid3"
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onMouseDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        tabIndex={-1}
                      >
                        <span
                          aria-describedby="uuid3"
                          className="c4"
                          data-testid="tooltip"
                          id="tooltip-trigger-uuid3"
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          onMouseDown={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                          tabIndex={-1}
                        >
                          <IconButton
                            aria-label="Show password in plain text."
                            aria-pressed={false}
                            buttonType="tertiary"
                            data-testid="show-password-button"
                            disabled={true}
                            iconName="eye"
                            onClick={[Function]}
                            type="button"
                          >
                            <Styled(AbstractButton)
                              aria-label="Show password in plain text."
                              aria-pressed={false}
                              buttonType="tertiary"
                              data-testid="show-password-button"
                              disabled={true}
                              focusable={true}
                              isMobile={false}
                              onClick={[Function]}
                              type="button"
                            >
                              <AbstractButton
                                aria-label="Show password in plain text."
                                aria-pressed={false}
                                buttonType="tertiary"
                                className="c5"
                                data-testid="show-password-button"
                                disabled={true}
                                focusable={true}
                                isMobile={false}
                                onClick={[Function]}
                                type="button"
                              >
                                <styled.button
                                  $focusable={true}
                                  aria-label="Show password in plain text."
                                  aria-pressed={false}
                                  buttonType="tertiary"
                                  className="c5"
                                  data-testid="show-password-button"
                                  disabled={true}
                                  isMobile={false}
                                  onClick={[Function]}
                                  type="button"
                                >
                                  <button
                                    aria-label="Show password in plain text."
                                    aria-pressed={false}
                                    className="c6 c5"
                                    data-testid="show-password-button"
                                    disabled={true}
                                    onClick={[Function]}
                                    type="button"
                                  >
                                    <Icon
                                      aria-hidden="true"
                                      color="currentColor"
                                      name="eye"
                                      size="16"
                                    >
                                      <svg
                                        aria-hidden="true"
                                        color="currentColor"
                                        focusable={false}
                                        height="16"
                                        width="16"
                                      />
                                    </Icon>
                                  </button>
                                </styled.button>
                              </AbstractButton>
                            </Styled(AbstractButton)>
                          </IconButton>
                        </span>
                      </styled.span>
                      <styled.div
                        aria-hidden={true}
                        data-popper-interactive={false}
                        data-testid="tooltip-content-container"
                        id="uuid3"
                        isMobile={false}
                        role="tooltip"
                        style={
                          {
                            "left": "0",
                            "position": "absolute",
                            "top": "0",
                          }
                        }
                        variant="normal"
                        visible={false}
                      >
                        <div
                          aria-hidden={true}
                          className="c7"
                          data-popper-interactive={false}
                          data-testid="tooltip-content-container"
                          id="uuid3"
                          role="tooltip"
                          style={
                            {
                              "left": "0",
                              "position": "absolute",
                              "top": "0",
                            }
                          }
                        >
                          <styled.div
                            data-popper-arrow={true}
                            style={
                              {
                                "position": "absolute",
                              }
                            }
                          >
                            <div
                              className="c8 c9"
                              data-popper-arrow={true}
                              style={
                                {
                                  "position": "absolute",
                                }
                              }
                            />
                          </styled.div>
                          <styled.div>
                            <div
                              className="c10"
                            >
                              Show password in plain text.
                            </div>
                          </styled.div>
                        </div>
                      </styled.div>
                    </Tooltip>
                  </div>
                </styled.div>
              </div>
            </styled.div>
          </Input>
        </div>
      </styled.div>
    </FieldContainer>
  </InputField>
</PasswordInput>
`;

exports[`PasswordInput matches the snapshot (Invalid) 1`] = `
.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c8 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c8:focus {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c8 > svg {
  color: inherit;
  height: var(--size-1x);
  width: var(--size-1x);
}

.c7 {
  background-color: transparent;
  border-color: transparent;
  color: #60666E;
  padding: 0;
  width: var(--size-2x);
}

.c7 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c7:focus {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c7:hover,
.c7[aria-expanded='true'] {
  background-color: rgb(0 0 0 / 0.15);
  border-color: transparent;
  color: #1B1C1E;
}

.c7:disabled {
  background-color: transparent;
  border-color: transparent;
  color: #B7BBC2;
}

.c7 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c1 {
  color: #CD2C23;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
}

.c2 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: var(--spacing-base);
}

.c11 {
  height: 1.25rem;
  position: absolute;
  width: 1rem;
}

.c11::before {
  border-style: solid;
  content: '';
  display: block;
  height: 0;
  margin: auto;
  width: 0;
}

.c11::after {
  border-style: solid;
  content: '';
  display: block;
  height: 0;
  margin: auto;
  position: absolute;
  width: 0;
}

.c9 {
  background-color: #60666E;
  border: 1px solid #FFFFFF;
  border-radius: var(--border-radius-half);
  box-shadow: 0 10px 20px 0 rgb(0 0 0 / 19%);
  box-sizing: border-box;
  color: #FFFFFF;
  display: none;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 0.75rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.25rem;
  margin: 0;
  max-width: 327px;
  min-height: 24px;
  padding: 1px var(--spacing-1x);
  -webkit-transition: opacity 300ms;
  transition: opacity 300ms;
  z-index: 1000;
}

.c9[data-popper-placement*="bottom"] > .c10 {
  height: 1rem;
  left: 0;
  margin-top: -0.375rem;
  top: 0;
  width: 1rem;
}

.c9[data-popper-placement*="bottom"] > .c10::before {
  border-color: transparent transparent #FFFFFF transparent;
  border-width: 0 0.5rem 0.5rem;
  position: absolute;
  top: -2px;
}

.c9[data-popper-placement*="bottom"] > .c10::after {
  border-color: transparent transparent #60666E transparent;
  border-width: 0 0.5rem 0.5rem;
}

.c9[data-popper-placement*="top"] > .c10 {
  bottom: 0;
  height: 0;
  left: 0;
  margin-bottom: 0;
  width: 1rem;
}

.c9[data-popper-placement*="top"] > .c10::before {
  border-color: #FFFFFF transparent transparent transparent;
  border-width: 0.5rem 0.5rem 0;
  position: absolute;
  top: 0;
}

.c9[data-popper-placement*="top"] > .c10::after {
  border-color: #60666E transparent transparent transparent;
  border-width: 0.5rem 0.5rem 0;
  top: -0.1rem;
}

.c9[data-popper-placement*="right"] > .c10 {
  height: 1rem;
  left: 0;
  margin-left: -0.8rem;
  width: 1rem;
}

.c9[data-popper-placement*="right"] > .c10::before {
  border-color: transparent #FFFFFF transparent transparent;
  border-width: 0.5rem 0.5rem 0.5rem 0;
}

.c9[data-popper-placement*="right"] > .c10::after {
  border-color: transparent #60666E transparent transparent;
  border-width: 0.5rem 0.5rem 0.5rem 0;
  left: 0.375rem;
  top: 0;
}

.c9[data-popper-placement*="left"] > .c10 {
  height: 1rem;
  margin-right: -0.7rem;
  right: -1px;
  width: 1rem;
}

.c9[data-popper-placement*="left"] > .c10::before {
  border-color: transparent transparent transparent #FFFFFF;
  border-width: 0.5rem 0 0.5rem 0.5rem;
}

.c9[data-popper-placement*="left"] > .c10::after {
  border-color: transparent transparent transparent #60666E;
  border-width: 0.5rem 0 0.5rem 0.5rem;
  left: 0.17rem;
  top: 0;
}

.c12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c6 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c6:focus {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #CD2C23;
}

.c0 > :nth-child(1) {
  margin-bottom: var(--spacing-half);
}

.c3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  color: #60666E;
  position: absolute;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.c4 {
  background: #FFFFFF;
  border: 1px solid;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  color: #000000;
  font-family: inherit;
  font-size: 0.875rem;
  -webkit-letter-spacing: 0.015rem;
  -moz-letter-spacing: 0.015rem;
  -ms-letter-spacing: 0.015rem;
  letter-spacing: 0.015rem;
  line-height: 1.5rem;
  margin: 0;
  min-height: var(--size-2x);
  outline: none;
  padding-bottom: 0;
  padding-top: 0;
  padding-right: var(--spacing-4x);
  padding-left: var(--spacing-1x);
  width: 100%;
}

.c4::-webkit-input-placeholder {
  color: #60666E;
}

.c4::-moz-placeholder {
  color: #60666E;
}

.c4:-ms-input-placeholder {
  color: #60666E;
}

.c4::placeholder {
  color: #60666E;
}

.c4:valid,
.c4[aria-invalid='false'] {
  border-color: #60666E;
}

.c4[aria-invalid='true'] {
  border-color: #CD2C23;
}

.c4:disabled,
.c4[aria-disabled='true'] {
  background-color: #F1F2F2;
  border-color: #DBDEE1;
  color: #DBDEE1;
}

.c4:disabled,
.c4[aria-disabled='true'],
.c4:disabled::-webkit-input-placeholder,
.c4[aria-disabled='true']::-webkit-input-placeholder {
  color: #B7BBC2;
}

.c4:disabled,
.c4[aria-disabled='true'],
.c4:disabled::-moz-placeholder,
.c4[aria-disabled='true']::-moz-placeholder {
  color: #B7BBC2;
}

.c4:disabled,
.c4[aria-disabled='true'],
.c4:disabled:-ms-input-placeholder,
.c4[aria-disabled='true']:-ms-input-placeholder {
  color: #B7BBC2;
}

.c4:disabled,
.c4[aria-disabled='true'],
.c4:disabled::placeholder,
.c4[aria-disabled='true']::placeholder {
  color: #B7BBC2;
}

.c4 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c4:focus {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

<PasswordInput
  validationErrorMessage="This is an error message"
  value="Pass123"
>
  <InputField
    autoComplete="current-password"
    data-testid="password-input"
    name="password"
    onChange={[Function]}
    rightAdornment={
      <Tooltip
        desktopPlacement="top"
        label="Show password in plain text."
      >
        <IconButton
          aria-label="Show password in plain text."
          aria-pressed={false}
          buttonType="tertiary"
          data-testid="show-password-button"
          iconName="eye"
          onClick={[Function]}
          type="button"
        />
      </Tooltip>
    }
    type="password"
    valid={false}
    validationErrorMessage="This is an error message"
    value="Pass123"
  >
    <FieldContainer
      data-testid="field-container"
      valid={false}
      validationErrorMessage="This is an error message"
    >
      <styled.div
        $hasHint={false}
        $hasLabel={false}
        $valid={false}
        data-testid="field-container"
      >
        <div
          className="c0"
          data-testid="field-container"
        >
          <InvalidFieldMessage
            htmlFor="uuid1"
            id="uuid1_invalid"
            noInvalidFieldIcon={false}
          >
            <styled.label
              $isMobile={false}
              aria-live="polite"
              data-testid="field-message"
              htmlFor="uuid1"
              id="uuid1_invalid"
              role="alert"
            >
              <label
                aria-live="polite"
                className="c1"
                data-testid="field-message"
                htmlFor="uuid1"
                id="uuid1_invalid"
                role="alert"
              >
                <Styled(Icon)
                  name="alertOctagon"
                  size="16"
                >
                  <Icon
                    className="c2"
                    color="currentColor"
                    name="alertOctagon"
                    size="16"
                  >
                    <svg
                      className="c2"
                      color="currentColor"
                      focusable={false}
                      height="16"
                      width="16"
                    />
                  </Icon>
                </Styled(Icon)>
                This is an error message
              </label>
            </styled.label>
          </InvalidFieldMessage>
          <Input
            autoComplete="current-password"
            data-testid="password-input"
            name="password"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInvalid={[Function]}
            rightAdornment={
              <Tooltip
                desktopPlacement="top"
                label="Show password in plain text."
              >
                <IconButton
                  aria-label="Show password in plain text."
                  aria-pressed={false}
                  buttonType="tertiary"
                  data-testid="show-password-button"
                  iconName="eye"
                  onClick={[Function]}
                  type="button"
                />
              </Tooltip>
            }
            type="password"
            value="Pass123"
          >
            <styled.div>
              <div
                className="c3"
              >
                <styled.input
                  $hasLeftAdornment={false}
                  $hasRightAdornment={true}
                  $isMobile={false}
                  aria-describedby="uuid1_invalid"
                  aria-disabled={false}
                  aria-invalid="true"
                  aria-required={false}
                  autoComplete="current-password"
                  data-testid="password-input"
                  disabled={false}
                  id="uuid1"
                  name="password"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInvalid={[Function]}
                  required={false}
                  type="password"
                  value="Pass123"
                >
                  <input
                    aria-describedby="uuid1_invalid"
                    aria-disabled={false}
                    aria-invalid="true"
                    aria-required={false}
                    autoComplete="current-password"
                    className="c4"
                    data-testid="password-input"
                    disabled={false}
                    id="uuid1"
                    name="password"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInvalid={[Function]}
                    required={false}
                    type="password"
                    value="Pass123"
                  />
                </styled.input>
                <styled.div
                  position="right"
                >
                  <div
                    className="c5"
                  >
                    <Tooltip
                      desktopPlacement="top"
                      label="Show password in plain text."
                    >
                      <styled.span
                        aria-describedby="uuid3"
                        data-testid="tooltip"
                        id="tooltip-trigger-uuid3"
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onMouseDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        tabIndex={-1}
                      >
                        <span
                          aria-describedby="uuid3"
                          className="c6"
                          data-testid="tooltip"
                          id="tooltip-trigger-uuid3"
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          onMouseDown={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                          tabIndex={-1}
                        >
                          <IconButton
                            aria-label="Show password in plain text."
                            aria-pressed={false}
                            buttonType="tertiary"
                            data-testid="show-password-button"
                            iconName="eye"
                            onClick={[Function]}
                            type="button"
                          >
                            <Styled(AbstractButton)
                              aria-label="Show password in plain text."
                              aria-pressed={false}
                              buttonType="tertiary"
                              data-testid="show-password-button"
                              focusable={true}
                              isMobile={false}
                              onClick={[Function]}
                              type="button"
                            >
                              <AbstractButton
                                aria-label="Show password in plain text."
                                aria-pressed={false}
                                buttonType="tertiary"
                                className="c7"
                                data-testid="show-password-button"
                                focusable={true}
                                isMobile={false}
                                onClick={[Function]}
                                type="button"
                              >
                                <styled.button
                                  $focusable={true}
                                  aria-label="Show password in plain text."
                                  aria-pressed={false}
                                  buttonType="tertiary"
                                  className="c7"
                                  data-testid="show-password-button"
                                  isMobile={false}
                                  onClick={[Function]}
                                  type="button"
                                >
                                  <button
                                    aria-label="Show password in plain text."
                                    aria-pressed={false}
                                    className="c8 c7"
                                    data-testid="show-password-button"
                                    onClick={[Function]}
                                    type="button"
                                  >
                                    <Icon
                                      aria-hidden="true"
                                      color="currentColor"
                                      name="eye"
                                      size="16"
                                    >
                                      <svg
                                        aria-hidden="true"
                                        color="currentColor"
                                        focusable={false}
                                        height="16"
                                        width="16"
                                      />
                                    </Icon>
                                  </button>
                                </styled.button>
                              </AbstractButton>
                            </Styled(AbstractButton)>
                          </IconButton>
                        </span>
                      </styled.span>
                      <styled.div
                        aria-hidden={true}
                        data-popper-interactive={false}
                        data-testid="tooltip-content-container"
                        id="uuid3"
                        isMobile={false}
                        role="tooltip"
                        style={
                          {
                            "left": "0",
                            "position": "absolute",
                            "top": "0",
                          }
                        }
                        variant="normal"
                        visible={false}
                      >
                        <div
                          aria-hidden={true}
                          className="c9"
                          data-popper-interactive={false}
                          data-testid="tooltip-content-container"
                          id="uuid3"
                          role="tooltip"
                          style={
                            {
                              "left": "0",
                              "position": "absolute",
                              "top": "0",
                            }
                          }
                        >
                          <styled.div
                            data-popper-arrow={true}
                            style={
                              {
                                "position": "absolute",
                              }
                            }
                          >
                            <div
                              className="c10 c11"
                              data-popper-arrow={true}
                              style={
                                {
                                  "position": "absolute",
                                }
                              }
                            />
                          </styled.div>
                          <styled.div>
                            <div
                              className="c12"
                            >
                              Show password in plain text.
                            </div>
                          </styled.div>
                        </div>
                      </styled.div>
                    </Tooltip>
                  </div>
                </styled.div>
              </div>
            </styled.div>
          </Input>
        </div>
      </styled.div>
    </FieldContainer>
  </InputField>
</PasswordInput>
`;

exports[`PasswordInput matches the snapshot (Normal) 1`] = `
.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c5 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c5:focus {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c5 > svg {
  color: inherit;
  height: var(--size-1x);
  width: var(--size-1x);
}

.c6 {
  background-color: transparent;
  border-color: transparent;
  color: #60666E;
  padding: 0;
  width: var(--size-2x);
}

.c6 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c6:focus {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c6:hover,
.c6[aria-expanded='true'] {
  background-color: rgb(0 0 0 / 0.15);
  border-color: transparent;
  color: #1B1C1E;
}

.c6:disabled {
  background-color: transparent;
  border-color: transparent;
  color: #B7BBC2;
}

.c6 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c9 {
  height: 1.25rem;
  position: absolute;
  width: 1rem;
}

.c9::before {
  border-style: solid;
  content: '';
  display: block;
  height: 0;
  margin: auto;
  width: 0;
}

.c9::after {
  border-style: solid;
  content: '';
  display: block;
  height: 0;
  margin: auto;
  position: absolute;
  width: 0;
}

.c7 {
  background-color: #60666E;
  border: 1px solid #FFFFFF;
  border-radius: var(--border-radius-half);
  box-shadow: 0 10px 20px 0 rgb(0 0 0 / 19%);
  box-sizing: border-box;
  color: #FFFFFF;
  display: none;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 0.75rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.25rem;
  margin: 0;
  max-width: 327px;
  min-height: 24px;
  padding: 1px var(--spacing-1x);
  -webkit-transition: opacity 300ms;
  transition: opacity 300ms;
  z-index: 1000;
}

.c7[data-popper-placement*="bottom"] > .c8 {
  height: 1rem;
  left: 0;
  margin-top: -0.375rem;
  top: 0;
  width: 1rem;
}

.c7[data-popper-placement*="bottom"] > .c8::before {
  border-color: transparent transparent #FFFFFF transparent;
  border-width: 0 0.5rem 0.5rem;
  position: absolute;
  top: -2px;
}

.c7[data-popper-placement*="bottom"] > .c8::after {
  border-color: transparent transparent #60666E transparent;
  border-width: 0 0.5rem 0.5rem;
}

.c7[data-popper-placement*="top"] > .c8 {
  bottom: 0;
  height: 0;
  left: 0;
  margin-bottom: 0;
  width: 1rem;
}

.c7[data-popper-placement*="top"] > .c8::before {
  border-color: #FFFFFF transparent transparent transparent;
  border-width: 0.5rem 0.5rem 0;
  position: absolute;
  top: 0;
}

.c7[data-popper-placement*="top"] > .c8::after {
  border-color: #60666E transparent transparent transparent;
  border-width: 0.5rem 0.5rem 0;
  top: -0.1rem;
}

.c7[data-popper-placement*="right"] > .c8 {
  height: 1rem;
  left: 0;
  margin-left: -0.8rem;
  width: 1rem;
}

.c7[data-popper-placement*="right"] > .c8::before {
  border-color: transparent #FFFFFF transparent transparent;
  border-width: 0.5rem 0.5rem 0.5rem 0;
}

.c7[data-popper-placement*="right"] > .c8::after {
  border-color: transparent #60666E transparent transparent;
  border-width: 0.5rem 0.5rem 0.5rem 0;
  left: 0.375rem;
  top: 0;
}

.c7[data-popper-placement*="left"] > .c8 {
  height: 1rem;
  margin-right: -0.7rem;
  right: -1px;
  width: 1rem;
}

.c7[data-popper-placement*="left"] > .c8::before {
  border-color: transparent transparent transparent #FFFFFF;
  border-width: 0.5rem 0 0.5rem 0.5rem;
}

.c7[data-popper-placement*="left"] > .c8::after {
  border-color: transparent transparent transparent #60666E;
  border-width: 0.5rem 0 0.5rem 0.5rem;
  left: 0.17rem;
  top: 0;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c4 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c4:focus {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #60666E;
}

.c0 > :nth-child(0) {
  margin-bottom: var(--spacing-half);
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  color: #60666E;
  position: absolute;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.c2 {
  background: #FFFFFF;
  border: 1px solid;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  color: #000000;
  font-family: inherit;
  font-size: 0.875rem;
  -webkit-letter-spacing: 0.015rem;
  -moz-letter-spacing: 0.015rem;
  -ms-letter-spacing: 0.015rem;
  letter-spacing: 0.015rem;
  line-height: 1.5rem;
  margin: 0;
  min-height: var(--size-2x);
  outline: none;
  padding-bottom: 0;
  padding-top: 0;
  padding-right: var(--spacing-4x);
  padding-left: var(--spacing-1x);
  width: 100%;
}

.c2::-webkit-input-placeholder {
  color: #60666E;
}

.c2::-moz-placeholder {
  color: #60666E;
}

.c2:-ms-input-placeholder {
  color: #60666E;
}

.c2::placeholder {
  color: #60666E;
}

.c2:valid,
.c2[aria-invalid='false'] {
  border-color: #60666E;
}

.c2[aria-invalid='true'] {
  border-color: #CD2C23;
}

.c2:disabled,
.c2[aria-disabled='true'] {
  background-color: #F1F2F2;
  border-color: #DBDEE1;
  color: #DBDEE1;
}

.c2:disabled,
.c2[aria-disabled='true'],
.c2:disabled::-webkit-input-placeholder,
.c2[aria-disabled='true']::-webkit-input-placeholder {
  color: #B7BBC2;
}

.c2:disabled,
.c2[aria-disabled='true'],
.c2:disabled::-moz-placeholder,
.c2[aria-disabled='true']::-moz-placeholder {
  color: #B7BBC2;
}

.c2:disabled,
.c2[aria-disabled='true'],
.c2:disabled:-ms-input-placeholder,
.c2[aria-disabled='true']:-ms-input-placeholder {
  color: #B7BBC2;
}

.c2:disabled,
.c2[aria-disabled='true'],
.c2:disabled::placeholder,
.c2[aria-disabled='true']::placeholder {
  color: #B7BBC2;
}

.c2 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c2:focus {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

<div
  class="c0"
  data-testid="field-container"
>
  <div
    class="c1"
  >
    <input
      aria-disabled="false"
      aria-invalid="false"
      aria-required="false"
      autocomplete="current-password"
      class="c2"
      data-testid="password-input"
      id="uuid1"
      name="password"
      type="password"
      value="Pass123"
    />
    <div
      class="c3"
    >
      <span
        aria-describedby="uuid3"
        class="c4"
        data-testid="tooltip"
        id="tooltip-trigger-uuid3"
        tabindex="-1"
      >
        <button
          aria-label="Show password in plain text."
          aria-pressed="false"
          class="c5 c6"
          data-testid="show-password-button"
          type="button"
        >
          <svg
            aria-hidden="true"
            color="currentColor"
            focusable="false"
            height="16"
            width="16"
          />
        </button>
      </span>
      <div
        aria-hidden="true"
        class="c7"
        data-popper-interactive="false"
        data-testid="tooltip-content-container"
        id="uuid3"
        role="tooltip"
        style="position:absolute;left:0;top:0"
      >
        <div
          class="c8 c9"
          data-popper-arrow="true"
          style="position:absolute"
        />
        <div
          class="c10"
        >
          Show password in plain text.
        </div>
      </div>
    </div>
  </div>
</div>
`;
